--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emailjs/browser": "^3.11.0",
     "@motionone/utils": "^10.16.3",
     "@types/dotenv": "^8.2.0",
+    "@vercel/analytics": "^1.6.1",
     "axios": "^1.8.2",
     "dotenv": "^16.3.1",
     "finaleseite2": "file:",
